# GOPSsolver

./: .gitattributes  .gitignore  AGENTS.md  README.md  TYPING_GUIDE.md  actions.py  cfr.py  check_types.py  example.py  globals.py  linprog.py  main.py  mypy.ini  play.py  requirements.txt  run_tests.py  solver.py  test.py  test_example.py  test_solver.py  utils.py
.devcontainer/: devcontainer.json
Zold_python_solver/: ARCHIVE.md
ai/: common.py  evc_viewer.py  exploitability.py  find.py  linprog.py  play.py  strategies.py  theory.md
claude_analysis/: analytical_solver.py  analyze_cache.py  analyze_deep.py  analyze_equivalence.py  analyze_prizes.py  analyze_states.py  check_lp.py  consolidated_tests.py  notes.txt  optimization_summary.py  profile_test.py  state_analysis.py  test_collapse.py  test_idx.py  test_prizes.py
cpp-solver/: CMakeLists.txt  README.md  results.txt
cpp-solver/ai/: questions.md
cpp-solver/docs/: design.md  goals.md
cpp-solver/reports/: baseline.evc.json  basetest.evc  check.py  common.py  compress.evc.json  evc_viewer.py  full6.evc.json  full8.evc.json  guarantee.evc  imightbethegoat.txt  play.py  strategies.py
cpp-solver/reports/optimizations/: compress.evc
cpp-solver/scripts/: run_tests.sh
cpp-solver/src/: ev_cache.cpp  linprog_glpk.cpp  linprog_glpk.h  main.cpp  mask.cpp  mask.h  matrix_builder.cpp  metrics.cpp  results2.txt  solver.cpp  solver.h  solver_internal.h
cpp-solver/tests/: test_solver.cpp
docs/: math.md
reports/: check.py  full6.evc  full6.evc.json  full6_new.evc.json  full6points_new.evc  full6points_new.evc.json  (+9 more)
(+62 files in other folders)
